# ert_simple

./: .gitattributes  CMakeLists.txt  README.md
include/: ChannelFeatures.hpp  ChannelFeaturesSimple.hpp  EnsembleTrainer.hpp  EnsembleTrees.hpp  FaceAlignmentEnsemble.hpp  FeaturesRelativeEncoding.hpp  LearningAlgorithm.hpp  LearningAlgorithmSimple.hpp  NearestEncoding.hpp  RegressionTree.hpp  TrainingSample.hpp  serialization.hpp  transformation.hpp
src/: ChannelFeaturesSimple.cpp  EnsembleTrainer.cpp  FaceAlignmentEnsemble.cpp  LearningAlgorithmSimple.cpp  NearestEncoding.cpp
test/: face_alignment_ert_simple_test.cpp
